--- a/Week-9/todo_list/package.json
+++ b/Week-9/todo_list/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.7.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "sass": "^1.58.0",
